Line spacing. Text align. Fix links

--- a/src/components/ProjectPage/style.css
+++ b/src/components/ProjectPage/style.css
@@ -14,6 +14,7 @@
   flex: 1;
   color: white;
   padding: 40px;
+  line-height: 24px;
   /* position: absolute; */
   /* overflow: hidden; */
 }
